# simple-radio-telescope-backend

./: .clang-format  .gitignore  .gitmodules  BUILDING.md  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md
.circleci/: config.yml
doc/img/: result_1644-4559.avif  result_crab_giant_pulse_spectrum_refresh.avif
prototype/: README.md  filterbank-reader.py  main.py  srtb_config.py  udp_receiver.py
prototype/__presto/: sigproc.py
userspace/: CMakeLists.txt  srtb_config.cfg  srtb_config_1644-4559.cfg
userspace/include/: coherent_dedispersion.hpp  commons.hpp  config.hpp  frequency_domain_filterbank.hpp  global_variables.hpp  logger.hpp
userspace/include/fft/: cufft_wrapper.hpp  fftw_wrapper.hpp  naive_fft.hpp
userspace/include/io/: rdma.hpp  udp_receiver.hpp
userspace/include/srtb/: assert.hpp  coherent_dedispersion.hpp  commons.hpp  config.hpp  frequency_domain_filterbank.hpp  global_variables.hpp  logger.hpp  math.hpp  program_options.hpp  signal_detect.hpp  spectrum.hpp  sycl.hpp  terminate_handler.hpp  termination_handler.hpp  thread_affinity.hpp  unpack.hpp  work.hpp
userspace/include/srtb/algorithm/: map_identity.hpp  map_reduce.hpp  mjd.hpp  multi_reduce.hpp  running_mean.hpp
userspace/include/srtb/fft/: cufft_like_wrapper.hpp  cufft_wrapper.hpp  fft.hpp  fft_1d_r2c_post_process.hpp  fft_window.hpp  fft_wrapper.hpp  fftw_wrapper.hpp  hipfft_wrapper.hpp  mufft_wrapper.hpp  naive_fft.hpp  naive_fft_wrapper.hpp  vkfft_wrapper.hpp
userspace/include/srtb/gui/: color_cast.hpp  exit_handler.hpp  gui.hpp  spectrum_image_provider.hpp
userspace/include/srtb/io/: backend_registry.hpp  file.hpp  sigproc_filterbank.hpp  udp_receiver.hpp  vdif_header.hpp
userspace/include/srtb/io/udp/: asio_udp_packet_provider.hpp  packet_mmap_v3_provider.hpp  packet_parser.hpp  recvfrom_packet_provider.hpp  recvmmsg_packet_provider.hpp  udp_common.hpp  udp_receiver.hpp
userspace/include/srtb/log/: log.hpp  sync_ostream_wrapper.hpp
userspace/include/srtb/memory/: cached_allocator.hpp  dual_port_object_pool.hpp  host_ring_buffer.hpp  mem.hpp  memcpy.hpp  streambuf.hpp  sycl_device_allocator.hpp  sycl_ring_buffer.hpp
userspace/include/srtb/pipeline/: baseband_output_pipe.hpp  copy_to_device_pipe.hpp  dedisperse_and_channelize_pipe.hpp  dedisperse_pipe.hpp  exit_handler.hpp  fft_pipe.hpp  file_pipe.hpp  pipe.hpp  read_file_pipe.hpp  rfi_mitigation_pipe.hpp  signal_detect_pipe.hpp  spectrum_pipe.hpp  udp_receiver_pipe.hpp  ui.hpp  unpack_pipe.hpp  write_file_pipe.hpp  write_signal_pipe.hpp
userspace/include/srtb/pipeline/framework/: composite_pipe.hpp  dummy_pipe.hpp  exit_handler.hpp  pipe.hpp  pipe_io.hpp
userspace/include/srtb/spectrum/: rfi_mitigation.hpp  simplify_spectrum.hpp
userspace/include/srtb/util/: assert.hpp  sycl_device_copyable.hpp  thread_affinity.hpp  type_name.hpp
userspace/src/: CMakeLists.txt  baseband_receiver.cpp  correlator.cpp  main.cpp  main.qml  plot_spectrum.py  plot_tim.py  qml.qrc  spectrum.qml  test-gui.cpp
userspace/src/21cma-genfil/: 21cma-genfil.cpp  21cma_genfil_work.hpp  dynspec_pipe.hpp  fft_r2c_post_process_pipe.hpp  write_multi_filterbank_pipe.hpp
userspace/src/21cma-make_beam/: .clang-format  CMakeLists.txt  assert.hpp  common.hpp  form_beam.hpp  get_delay.hpp  global_variables.hpp  make_beam.cpp  merge_sort.hpp  program_options.cpp  program_options.hpp  rfi_mitigation.hpp  statistics.hpp
userspace/tests/: CMakeLists.txt  buffer_algorithms.dp.hpp  naive_fft.dp.hpp  test-common.hpp  test-df64.cpp  test-df64.py  test-fft.cpp  test-fft_window.cpp  test-fft_wrappers.cpp  test-frequency_domain_filterbank.cpp  test-host_ring_buffer.cpp  test-multi_reduce.cpp  test-naive_fft.cpp  test-rfi_mitigation.cpp  test-simplify_spectrum.cpp  test-sycl-setup.cpp  test-sycl_ring_buffer.cpp  test-udp_receiver.cpp  test-unpack.cpp
userspace/tests/misc/: CMakeLists.txt  test-io_uring.cpp  test-recvfrom-async.cpp  test-recvfrom.cpp  test-udpdk.cpp  udpdk_config.ini
